--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-core
     compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '0.7.2'
+    // https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-nlp
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '0.7.2'
     // https://mvnrepository.com/artifact/org.nd4j/nd4j-native-platform
     compile group: 'org.nd4j', name: 'nd4j-native-platform', version: '0.7.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
