--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,7 @@ dependencies {
     compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '0.7.2'
     // https://mvnrepository.com/artifact/org.nd4j/nd4j-native-platform
     compile group: 'org.nd4j', name: 'nd4j-native-platform', version: '0.7.2'
+    // https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core
+    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
